// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow deve envelopar cada filho em um elemento que crie espaçamento horizontal 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro direction 1`] = `
.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <div>
      1
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      2
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      3
    </div>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro hSpacing 1`] = `
.emotion-3 {
  margin: 0 -0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.25rem;
  margin-bottom: 0rem;
  margin-left: 0.25rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro vSpacing 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 1.25rem;
  margin-right: 0.5rem;
  margin-bottom: 1.25rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;
